# Regex_Gen

svm-python-v100/: LICENCE_RExSVM.txt  README_RExSVM.txt  macro_definition.txt  match_regex.py  parse_regex.py  parse_tree.py  preprocessing.py  regex.py
svm-python-v100/alignment_cpp/: Align  AlignConfig.h  AlignedString.cpp  AlignedString.h  CMakeLists.txt  Hirschberg.cpp  Hirschberg.h  Main.cpp  Makefile  README  SimilarityString.cpp  SimilarityString.h  Util.cpp  Util.h  cmake_install.cmake  gprof2dot.sh  output.txt  trainFile.txt  trainFile2.txt  trainFileList.txt  trainTest.txt
svm-python-v100/example/: createFileList.py  deleteAlignment.py  renameFiles.py  testDirList.txt  trainDirList.txt
svm-python-v100/example/test/test1/: 0.in  1.in  10.in  100.in  101.in  102.in  103.in  104.in  105.in  106.in  107.in  11.in  12.in  13.in  14.in  15.in  16.in  17.in  18.in  19.in  2.in  20.in  21.in  22.in  23.in  24.in  25.in  26.in  27.in  28.in  29.in  3.in  30.in  31.in  32.in  33.in  34.in  35.in  36.in  37.in  (+70 more)
svm-python-v100/example/test/test2/: 0.in  1.in  10.in  100.in  101.in  102.in  103.in  104.in  105.in  106.in  107.in  108.in  109.in  11.in  110.in  111.in  112.in  113.in  114.in  115.in  116.in  117.in  118.in  119.in  12.in  120.in  121.in  122.in  123.in  124.in  125.in  126.in  127.in  128.in  129.in  13.in  130.in  131.in  132.in  133.in  (+162 more)
svm-python-v100/example/test/test3/: 123.in  13.in  131.in  135.in  138.in  140.in  157.in  170.in  171.in  181.in  182.in  184.in  185.in  187.in  19.in  193.in  20.in  25.in  42.in  45.in  61.in  69.in  8.in  80.in  (+7 more)
(+835 files in other folders)
